[MOD] refactoring project